kubernetes/service-cloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: getshort-service
spec:
  selector:
    app: getshort
  ports:
  - port: 80
    targetPort: 8000
  type: LoadBalancer
